Fixed the issue where the other events on the event show page was showing seats incorrectly

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -204,7 +204,7 @@
               <% if @event.attendee.nil?%>
                   <% seats_left = other_event.max_seats %>    
               <% else %>
-                  <% seats_left = other_event.max_seats - @event.attendee.pluck(:seats).sum %>
+                  <% seats_left = other_event.max_seats - other_event.attendee.pluck(:seats).sum %>
               <% end %>
               <%= seats_left %> Seats left
           </div>
