--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -208,5 +208,20 @@
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript" charset="utf-8">
+	  var _ptq = _ptq || [];
+	  var _punchtab_settings = {
+	    key: "fbd6d029c4ad14ab27a74927046a7087",
+	    bar: {}
+	  };
+
+	  (function() {
+	    var pt = document.createElement('script'); pt.type = 'text/javascript'; pt.async = true;
+	    pt.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'static.punchtab.com/js/pt.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(pt, s);
+	  })();
+	</script>
+
 </body>
 </html>
