--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,10 +55,10 @@
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) return;
 	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=229399707199762";
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
-	<!-- FB start -->
+	<!-- FB end -->
 
 	<div class="header">
       <div class="container">
@@ -204,7 +204,7 @@
 	<div class="container">
 		<div class="row-fluid">
 			<div class="span12">
-				<div class="fb-like" data-href="http://developers.facebook.com/docs/reference/plugins/like" data-send="true" data-width="450" data-show-faces="true"></div>
+				<div class="fb-like" data-href="http://www.letsdine.co/" data-width="450" data-show-faces="true" data-send="true"></div>
 			</div>
 		</div>
 	</div>
