--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -29,7 +29,7 @@
 					<ul>
 						<li><a href="/admin">Dashboard</a></li>
 						<li><a href="/admin/users">Users</a></li>
-						<li><a href="/admin/restaurant">Restaurants</a></li>
+						<li><a href="/admin/restaurants">Restaurants</a></li>
 						<li><a href="/admin/event">Events</a></li>
 						<li><a href="/admin/invites">Invites</a></li>
 
