--- a/app/views/admin/restaurants/new.html.erb
+++ b/app/views/admin/restaurants/new.html.erb
@@ -5,7 +5,7 @@
 
 			<%= render 'form' %>
 
-			<%= link_to 'Back', restaurants_path %>
+			<%= link_to 'Back', admin_restaurants_path %>
 			
 		</div>
 	</div>
