--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -182,6 +182,22 @@
 <div class="container">
   <div class="row-fluid">
     <div class="span12">
+      <%= form_for([@post, @post.comments.build]) do |f| %>
+        <p>
+          <%= f.label :body %><br />
+          <%= f.text_area :body %>
+        </p>
+        <p>
+          <%= f.submit %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row-fluid">
+    <div class="span12">
       <h1>Other events in your city</h1>
       <p><%= link_to "See all events in your city", events_path%> </p>
     </div>
