Basic google maps loading, now need to add the marker for the restaurant location

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -835,6 +835,11 @@ box-shadow:         0px 3px 6px rgba(50, 50, 50, 0.5);
 	padding: 20px;
 }
 /********************************************************************************/
+/* Map Styling */
+/********************************************************************************/
+
+
+/********************************************************************************/
 /* Group Styling */
 /********************************************************************************/
 .new_group_button_container
