--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,27 @@
 <% content_for :javascript do %>
     <%= javascript_include_tag "closed-event-overlay" %>
+
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+
+    <script>
+      var map;
+      var marker;
+      
+      function initialize() {
+        var mapOptions = {
+          zoom: 8,
+          center: new google.maps.LatLng(17.432259,78.407529),
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        map = new google.maps.Map(document.getElementById('map-canvas'),
+            mapOptions);
+      }
+
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
 <% end %>
+
+
 
 <% content_for :title, "#{@event.event_name} | LetsDine" %>
 
@@ -103,7 +124,7 @@
           <% if @event.seats_left <= 0 %>
             <%= f.submit "Sign up for waiting list", :class => "large red awesome"  %>
           <% else %>
-            <%= f.submit "Join this event", :class => "large red awesome"  %>s
+            <%= f.submit "Join this event", :class => "large red awesome"  %>
           <% end %>
           
 
@@ -112,6 +133,15 @@
       
       
       
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row-fluid">
+    <div class="span12">
+      <h1>Restaurant Location</h1>
+      <div id="map-canvas" style="width: 100%; height: 200px"></div>
     </div>
   </div>
 </div>
