Added a marker for the restaurant location. Now need to modify the look and feel of the marker to match the letsdine layout and color scheme

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,15 +6,21 @@
     <script>
       var map;
       var marker;
-      
+      var myLatlng = new google.maps.LatLng(17.432259,78.407529);
+
       function initialize() {
         var mapOptions = {
-          zoom: 8,
-          center: new google.maps.LatLng(17.432259,78.407529),
+          zoom: 14,
+          center: myLatlng,
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
+        marker = new google.maps.Marker({
+            position: myLatlng,
+            map: map,
+            title: 'Hello World!'
+        });
       }
 
       google.maps.event.addDomListener(window, 'load', initialize);
