--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,23 +76,7 @@
 		</div>
 	</div>
 
-	<div class="container">
-		<div class="row">
-			<div class="span6 offset3">
-				<div class="headerLogo">
-					<%= image_tag "logo.png" %>
-					<h3>
-						Meet new people with similar interests.
-					</h3>
-					<p>
-						Find people that share your interest and meet them over great food in one of our events.
-					</p>
-					<a href="#" class="css3-button css3-button_blue homepageSignup">Signup with <%= image_tag("facebookLogo.png")%></a>
-					<a href="#" class="css3-button css3-button_pink homepageSignup">Signup with Email</a>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 
 
@@ -115,7 +99,10 @@
 
 	<script>
 		$(document).ready(function(){
-			 $("#e1").select2();
+			 $("#e1").select2({
+			 	placeholder: "Select a City",
+                		allowClear: true
+			 });
 		});
 	</script>
 
