Fixed the issue where the homepage header content was showing on all page. Now that content is only shown in the homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,16 @@
 		</div>
 	</div>
 
-	
+	<div class="container">
+    <div class="row">
+        <div class="span6 offset3">
+            <div class="headerLogo">
+                <%= image_tag "logo.png" %>
+               <%= yield :homepageHeader %>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
