Moved the seats left on top of the image in the event listing

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -78,45 +78,27 @@ body {
     font-size: 15px;
     font-weight: bold;
     display: inline-block; }
-  .filter .citySelect {
-    margin: 0;
-    background: #f1efee;
-    padding: 10px;
-    color: #9d8d87;
-    font-weight: bold;
-    border: 1px solid #dad4d2;
-    display: inline-block; }
-  .filter .citySelect:hover {
-    cursor: pointer; }
-  .filter .citySelect i {
-    line-height: 11px;
-    padding-left: 30px; }
-  .filter .cityList {
-    background: #fff;
-    margin-top: -1px;
+
+/**********************************************************************/
+/* Event List Item Style */
+/**********************************************************************/
+.event img {
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 6px 6px 0px 0px;
+  border-radius: 6px 6px 0px 0px; }
+.event h4 {
+  padding: 10px; }
+
+.eventListContainer {
+  position: relative; }
+  .eventListContainer .seatsLeft {
     position: absolute;
-    left: 100px;
-    z-index: 1000;
-    width: 191px;
-    -webkit-box-shadow: 0px 10px 26px rgba(50, 50, 50, 0.3);
-    -moz-box-shadow: 0px 10px 26px rgba(50, 50, 50, 0.3);
-    box-shadow: 0px 10px 26px rgba(50, 50, 50, 0.3);
-    border: 1px solid #dad4d2; }
-  .filter .cityList ul {
-    list-style: none;
-    margin: 0;
-    padding: 10px 0 0 0; }
-  .filter .cityList ul li {
+    top: 15px;
+    left: 0px;
+    /*background: $brand_color_80_trasparent;*/
+    background: red;
     padding: 10px;
-    cursor: pointer; }
-  .filter .cityList ul li:hover {
-    color: #fff;
-    background: #c3bab6; }
-  .filter .cityList ul li a {
-    color: #444;
-    font-weight: bold; }
-  .filter .cityList ul li a:hover {
-    text-decoration: none; }
+    color: white; }
 
 /**********************************************************************/
 /* Login style */
@@ -142,176 +124,8 @@ body {
 #sign_up_link a:hover {
   text-decoration: none; }
 
-.homepage {
-  list-style: none;
-  color: #a1afaf;
-  margin-top: 20px;
-  margin-left: -20px;
-  margin-bottom: 10px;
-  font-size: 18px;
-  text-shadow: 0px 0px 1px #647575; }
-
-.headerImage-red {
-  background: url(/assets/eventIcon.png) no-repeat center center;
-  background-color: rgba(221, 65, 36, 0.5);
-  min-height: 110px;
-  min-width: 110px; }
-
-.headerImage-blue {
-  background: url(/assets/joinEvent.png) no-repeat center center;
-  background-color: rgba(27, 110, 138, 0.5);
-  min-height: 110px;
-  min-width: 110px; }
-
-.headerImage-green {
-  background: url(/assets/shareEvent.png) no-repeat center center;
-  background-color: rgba(131, 202, 33, 0.5);
-  min-height: 110px;
-  min-width: 110px; }
-
-.homepage li {
-  display: inline;
-  margin-right: 20px;
-  font-weight: bold; }
-
-.homepage li a {
-  color: #a1afaf;
-  font-size: 18px;
-  text-shadow: 0px 0px 1px #647575;
-  text-decoration: none;
-  	/* First we need to help some browsers along for this to work.
-       Just because a vendor prefix is there, doesn't mean it will
-       work in a browser made by that vendor either, it's just for
-       future-proofing purposes I guess. */
-  -o-transition: .5s;
-  -ms-transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s;
-  /* ...and now for the proper property */
-  transition: .5s; }
-
-.homepage li a:visited {
-  color: #a1afaf;
-  font-size: 18px;
-  text-shadow: 0px 0px 1px #647575; }
-
-.homepage li a:visited {
-  color: #a1afaf;
-  font-size: 18px;
-  text-shadow: 0px 0px 1px #647575; }
-
-.homepage li a:hover {
-  color: #080809;
-  text-shadow: 0px 1px 2px #404046; }
-
-.homepage li a.selected {
-  color: #080809;
-  text-shadow: 0px 1px 2px #404046; }
-
-.locationpicker {
-  margin-top: 10px; }
-
-.slider {
-  margin-top: -170px; }
-
-.slider img {
-  position: relative;
-  left: 20px;
-  right: 20px; }
-
-.gallery {
-  height: 400px;
-  width: 100%; }
-
 /**********************************************************************/
-/* Event box styles */
-/**********************************************************************/
-.event {
-  width: 90%;
-  height: auto;
-  margin: 20px auto;
-  padding: 20px;
-  position: relative;
-  background: white;
-  border: 1px solid #cccccc;
-  border-radius: 3px; }
-
-.event::before,
-.event::after {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 2px;
-  right: 2px;
-  top: 0;
-  z-index: -1;
-  background: #fff;
-  border: 1px solid #cccccc; }
-
-.event::after {
-  left: 4px;
-  right: 4px;
-  bottom: -5px;
-  z-index: -2;
-  box-shadow: 0 8px 8px -5px rgba(0, 0, 0, 0.3); }
-
-.event img {
-  position: relative; }
-
-.closed {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  padding: 10px;
-  color: #fff;
-  font-weight: bold;
-  background: rgba(0, 0, 0, 0.8); }
-
-.closed h3 {
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  padding-top: 20px; }
-
-.event h4 {
-  margin-bottom: 20px; }
-
-.event p {
-  margin-top: 10px; }
-
-/* Special event box styling */
-.event_special {
-  width: 90%;
-  height: auto;
-  margin: 20px auto;
-  padding: 20px;
-  position: relative;
-  background: #292929;
-  border: 1px solid #181818;
-  border-radius: 3px; }
-
-.event_special::before,
-.event_special::after {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 2px;
-  right: 2px;
-  top: 0;
-  z-index: -1;
-  background: #292929;
-  border: 1px solid #181818; }
-
-.event_special::after {
-  left: 4px;
-  right: 4px;
-  bottom: -5px;
-  z-index: -2;
-  box-shadow: 0 8px 8px -5px rgba(0, 0, 0, 0.3); }
-
-.event_special p {
-  color: #fff; }
-
+/* TBD */
 /**********************************************************************/
 .detail {
   color: #ccc;
@@ -321,60 +135,9 @@ body {
   background: url("/assets/topBarBG.png");
   margin-top: 20px; }
 
-.peopleAttending {
-  margin-top: 20px; }
-
-.eventHeader {
-  height: 400px; }
-
-.eventImage {
-  border: 6px solid #000; }
-
-.eventDetailsImage {
-  width: 90%;
-  height: auto;
-  margin: 20px auto 10px -5px;
-  padding: 20px;
-  position: relative;
-  background: white;
-  border: 1px solid #cccccc;
-  border-radius: 3px; }
-
-.eventDetailsImage::before,
-.eventDetailsImage::after {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 2px;
-  right: 2px;
-  top: 0;
-  z-index: -1;
-  background: #fff;
-  border: 1px solid #cccccc; }
-
-.eventDetailsImage::after {
-  left: 4px;
-  right: 4px;
-  bottom: -5px;
-  z-index: -2;
-  box-shadow: 0 8px 8px -5px rgba(0, 0, 0, 0.3); }
-
-.eventDetailsText {
-  margin-top: 10px; }
-
-.eventDetailsImage img {
-  position: relative; }
-
-.event_date_time {
-  padding: 10px;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  font-weight: bold;
-  font-size: 21px; }
-
+/**********************************************************************/
+/* TBD */
+/**********************************************************************/
 .restaurantList ul {
   list-style: none;
   margin: 0; }
@@ -425,105 +188,9 @@ body {
 .restaurantDetailsContainer {
   margin-bottom: 10px; }
 
-/* Buttons */
-.awesome, .awesome:visited {
-  background: #222222 url(alert-overlay.png) repeat-x;
-  display: inline-block;
-  padding: 5px 10px 6px;
-  color: #fff;
-  text-decoration: none;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-  position: relative;
-  cursor: pointer; }
-
-.awesome:hover {
-  background-color: #111;
-  color: #fff; }
-
-.awesome:active {
-  top: 1px; }
-
-.small.awesome, .small.awesome:visited {
-  font-size: 11px; }
-
-.awesome, .awesome:visited,
-.medium.awesome, .medium.awesome:visited {
-  font-size: 13px;
-  font-weight: bold;
-  line-height: 1;
-  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25); }
-
-.large.awesome, .large.awesome:visited {
-  font-size: 14px;
-  padding: 8px 14px 9px; }
-
-.green.awesome, .green.awesome:visited {
-  background-color: #91bd09; }
-
-.green.awesome:hover {
-  background-color: #749a02; }
-
-.blue.awesome, .blue.awesome:visited {
-  background-color: #2daebf; }
-
-.blue.awesome:hover {
-  background-color: #007d9a; }
-
-.red.awesome, .red.awesome:visited {
-  background-color: #e33100; }
-
-.red.awesome:hover {
-  background-color: #872300; }
-
-.magenta.awesome, .magenta.awesome:visited {
-  background-color: #a9014b; }
-
-.magenta.awesome:hover {
-  background-color: #630030; }
-
-.orange.awesome, .orange.awesome:visited {
-  background-color: #ff5c00; }
-
-.orange.awesome:hover {
-  background-color: #d45500; }
-
-.yellow.awesome, .yellow.awesome:visited {
-  background-color: #ffb515; }
-
-.login {
-  width: 45%;
-  height: auto;
-  margin: 20px auto;
-  padding: 20px;
-  position: relative;
-  background: white;
-  border: 1px solid #cccccc;
-  border-radius: 3px; }
-
-.login::before,
-.login::after {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 2px;
-  right: 2px;
-  top: 0;
-  z-index: -1;
-  background: #fff;
-  border: 1px solid #cccccc; }
-
-.login::after {
-  left: 4px;
-  right: 4px;
-  bottom: -5px;
-  z-index: -2;
-  box-shadow: 0 8px 8px -5px rgba(0, 0, 0, 0.3); }
-
+/**********************************************************************/
+/* TBD */
+/**********************************************************************/
 #interests_select {
   margin-bottom: 10px; }
 
@@ -556,126 +223,6 @@ body {
 /********************************************************************************/
 /* Map Styling */
 /********************************************************************************/
-/********************************************************************************/
-/* Group Styling */
-/********************************************************************************/
-.new_group_button_container {
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  padding: 10px 0;
-  margin-bottom: 20px; }
-
-.group_body {
-  background: url("/assets/groupsBG.png"); }
-
-.group-row {
-  margin-bottom: 10px; }
-
-.group {
-  background: #fff; }
-
-.group .image {
-  position: relative;
-  width: 100%; }
-
-.group .image h4 {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  text-shadow: 0px 2px 2px #333333; }
-
-.group .image h4.group_category {
-  position: absolute;
-  top: 80%;
-  left: 10px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  text-shadow: 0px 2px 2px #333333; }
-
-.groups_filter ul {
-  list-style: none;
-  margin: 0; }
-
-.groups_filter ul li {
-  margin-bottom: 10px;
-  padding: 10px; }
-
-.groups_filter ul li:hover {
-  background: url("/assets/headerBG.png");
-  color: #fff;
-  cursor: pointer; }
-
-.groups_filter ul li a:hover {
-  text-decoration: none; }
-
-.group_details {
-  padding: 10px; }
-
-.group-sub-menu {
-  margin: 0;
-  padding: 10px;
-  background: #fff;
-  list-style: none; }
-
-.group-sub-menu li {
-  display: inline;
-  margin-right: 20px;
-  padding: 12px; }
-
-.group-sub-menu li:hover {
-  background: url("/assets/headerBG.png");
-  color: #fff;
-  cursor: pointer; }
-
-.discussion-list {
-  background: #fff;
-  padding: 10px;
-  margin-top: 20px; }
-
-.discussion-list ul {
-  list-style: none;
-  margin: 0 0 30px 0; }
-
-.discussion-list ul li {
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 10px;
-  padding-top: 20px; }
-
-.discussion-list img {
-  float: left; }
-
-.discussion-list .comment {
-  margin-left: 50px; }
-
-.seats_left_container {
-  margin: 30px 0; }
-
-.seats_left {
-  background: #dd4124;
-  display: inline;
-  padding: 20px;
-  font-size: 21px;
-  color: #fff;
-  font-weight: bold; }
-
-.eventDetails {
-  margin-top: 20px; }
-
-.seats_left_event_page {
-  background: #dd4124;
-  display: inline;
-  color: #fff;
-  padding: 10px;
-  font-weight: bold;
-  margin-top: 20px; }
-
-.restaurant_hidden {
-  display: none; }
-
 /**********************************************************************/
 /* Profile style */
 /**********************************************************************/
